# RL.py

./: Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.py
rlpy/: __init__.py  __main__.py  _enum_classes.py  _exceptions.py  match.py  season_tools.py  tools.py  user.py  user_playlist.py
rlpy/async_api/: __init__.py  starleague.py  user.py
rlpy/extra/: current_season.json  season_10.json  season_6.json  season_8.json  season_9.json
rlpy/sync_api/: starleague.py  user.py
